Add ciudades page in phonegap

--- a/apps/phonegap/index.html
+++ b/apps/phonegap/index.html
@@ -12,6 +12,16 @@
         <script src="js/cualbondi.js"></script>
     </head>
     <body>
+        <div data-role="page" id="ciudades">
+            <div data-role="header">
+                <div align="center"><img style="margin-top: 2px;" src="img/logo.png" /></div>
+            </div>
+            <ul id="lista-ciudades" data-role="listview">
+                <li><a href="#" data-name="la-plata">La Plata</a></li>
+                <li><a href="#" data-name="rosario">Rosario</a></li>
+                <li><a href="#" data-name="buenos-aires">Buenos Aires</a></li>
+            </ul>
+        </div>
 
         <div data-role="page" id="opciones">
             <div data-role="header">
