--- a/apps/phonegap/index.html
+++ b/apps/phonegap/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>Cualbondi Mobile</title>
 
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0-rc.1/jquery.mobile-1.3.0-rc.1.min.css" />
@@ -13,19 +14,22 @@
     </head>
     <body>
         <div data-role="page" id="ciudades">
-            <div data-role="header">
-                <div align="center"><img style="margin-top: 2px;" src="img/logo.png" /></div>
+            <div align="center" style="padding:20px;">
+                <img src="img/isologo.png">
             </div>
-            <ul id="lista-ciudades" data-role="listview">
-                <li><a href="#" data-name="la-plata">La Plata</a></li>
-                <li><a href="#" data-name="rosario">Rosario</a></li>
-                <li><a href="#" data-name="buenos-aires">Buenos Aires</a></li>
-            </ul>
+            <div style="padding:10px;">
+                <ul id="lista-ciudades" data-role="listview" data-inset="true">
+                    <li><a href="#" data-name="la-plata">La Plata</a></li>
+                    <li><a href="#" data-name="rosario">Rosario</a></li>
+                    <li><a href="#" data-name="buenos-aires">Buenos Aires</a></li>
+                </ul>
+            </div>
         </div>
 
         <div data-role="page" id="opciones">
             <div data-role="header">
-                <div align="center"><img style="margin-top: 2px;" src="img/logo.png" /></div>
+                <a href="#ciudades" data-icon="home" style="top:7px;">Inicio</a>
+                <div align="center"><img src="img/logo.png"></div>
             </div>
             <div id="opciones_errors"></div>
             <div data-role="content">
@@ -43,7 +47,8 @@
 
         <div data-role="page" id="sugerencias">
             <div data-role="header">
-                <div align="center"><img style="margin-top: 2px;" src="img/logo.png" /></div>
+                <a href="#opciones" data-icon="back" style="top:7px;">Atrás</a>
+                <div align="center"><img src="img/logo.png"></div>
             </div>
             <div id="suggest_errors"></div>
             <div id="suggest_content" data-role="content">
@@ -55,7 +60,8 @@
 
         <div data-role="page" id="resultados">
             <div data-role="header">
-                <div align="center"><img style="margin-top: 2px;" src="img/logo.png" /></div>
+                <a href="#sugerencias" data-icon="back" style="top:7px;">Atrás</a>
+                <div align="center"><img src="img/logo.png"></div>
             </div>
             <div id="resultados_content" data-role="content"></div>
         </div>
